# EmployeeManagementSystem

./: .env.example  .firebaserc  .gcloudignore  .gitignore  .htaccess  .replit  API_DOCUMENTATION.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  Dockerfile  MOBILE_APP_EXAMPLES.md  Procfile  QUICK_DEPLOY.md  README.md  SYSTEM_MAP.md  WORKSHOP_REPORTS_ENHANCEMENT.md  add_document_columns.py  add_employee_id_to_handover.py  add_missing_columns.py  add_sample_attendance.py  admin_cookies.txt  app.py  app.yaml  auth_cookies.txt  basic.php  check_installation.py  check_pdfkit_usage.py  cookies.txt  create_cloudpanel_package.py  create_deployment_package.py  create_deployment_zip.py  create_final_deployment_package.py  create_final_employee_report.py  create_fixed_export.py  create_missing_columns.py  create_new_template.py  create_test_data.py  create_working_export_function.py  create_zip_package.py  dashboard.php  (+81 more)
attached_assets/: Pasted---1744754957537.txt  Pasted---1752511868107_1752511868108.txt  Pasted---1755352559888_1755352559889.txt  Pasted--1--1755347263833_1755347263834.txt  Pasted--1-mobile-devices-id--1753208221228_1753208221229.txt  Pasted--1-mobile-devices-id-phone-number--1753207576351_1753207576351.txt  Pasted--DOCTYPE-html-html-lang-ar-dir-rtl-head-meta-charset-UTF-8-meta-name-vie-1752516168053_1752516168054.txt  Pasted--Flask-PostgreSQL-HTML-CSS-JavaScript-1--1745063303282.txt  Pasted--Multi-Tenant-1--1750455400984_1750455400985.txt  Pasted--PDF-FPDF-PDF-from--1749389755793_1749389755796.txt  Pasted--a-if-driver-mobile--1753219399808_1753219399810.txt  (+9 more)
(+512 files in other folders)
