[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "hijri-converter>=2.3.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-bidi>=0.6.6",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "xlrd>=2.0.1",
    "xlsxwriter>=3.2.2",
    "flask-login>=0.6.3",
    "reportlab>=4.3.1",
    "twilio>=9.5.2",
    "weasyprint>=65.1",
    "fpdf>=1.7.2",
    "python-dotenv>=1.1.0",
    "pymysql>=1.1.1",
]
